<resources>
    <string name="app_name">נקודת צמיחה</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">הגדרות</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Google-->

    <string name="web_application">139877713692-r8h2fk6hmuvvgalcd8ak95d09a874tt8.apps.googleusercontent.com</string>
    <!--<string name="web_application">75665281941-ppr4lllt40ui8ia3ul95rhhmi0eprt5u.apps.googleusercontent.com</string>-->
    <!--Facebook-->
    <string name="facebook_app_id" translatable="false">1731866163735085</string>

    <!--login-->
    <string name="email">דואר אלקטרוני</string>
    <string name="username">שם משתמש</string>
    <string name="password">סיסמה</string>
    <string name="Dont_have_account_yet">משתמש חדש?</string>
    <string name="forgot_password">שכחתי סיסמה</string>
    <string name="signup">הירשם</string>
    <string name="Signin">התחבר</string>
    <string name="or" translatable="false">----- או התחבר/י באמצעות -----</string>
    <string name="reset_message"><u>לשחזור סיסמה , נא להזין דואר אלקטרוני</u></string>
    <string name="Sign_out">התנתק</string>
    <string name="Facebook">Facebook</string>
    <string name="LoginActivity">LoginActivity</string>
    <string name="create_account">צור חשבון</string>
    <string name="send_restore_mail">נשלח מייל לשחזור סיסמה</string>
    <string name="Email_Password_username_cannot_be_empty">יש להזין שם משתמש, דוא"ל וסיסמה</string>
    <string name="Email_and_Password_cannot_be_empty">יש להזין דואר אלקטרוני וסיסמה</string>
    <string name="restore">שחזר סיסמה</string>

    <!--Navigation Drawer-->
    <string name="about_us">אודות</string>
    <string name="events">אירועים ופעילויות</string>
    <string name="upload_event">הוספת פעילות</string>
    <string name="push_notification">התראות ועדכונים</string>
    <string name="admin">אדמיניסטרטור</string>
    <string name="notification">התראות ועדכונים</string>

    <!--process-->
    <string name="Connecting...">מתחבר...</string>
    <string name="connecting">מתחבר</string>
    <string name="upload_successfully">האירוע הועלה בהצלחה</string>
    <string name="disconnect">מתנתק...</string>
    <string name="sent_successfully">נשלח בהצלחה</string>

    <!--messages-->
    <string name="required_field">שדה חובה</string>
    <string name="empty_field">אין להשאיר שדה ריק</string>
    <string name="user_not_exist">משתמש אינו קיים</string>
    <string name="invalid_email">דואר אלקטרוני אינו תקין</string>
    <string name="log_in_to_comment">התחבר על מנת להגיב</string>
    <string name="invalid_password">סיסמה לא תקינה, מינימום 6 תווים</string>
    <string name="error">שגיאה:</string>

    <!--fields and buttons-->
    <string name="title">כותרת:</string>
    <string name="content">תוכן:</string>
    <string name="connect">התחברות</string>
    <string name="press_here_to_connect"><u> לחץ כאן להתחברות</u></string>

    <string name="add_admin">הוספת מנהל</string>
    <string name="add_a_comment">שלח תגובה</string>

    <string name="send">שלח</string>
    <string name="comment">תגובה</string>
    <string name="write_comment_here">הגב...</string>
    <string name="post_comment">שלח תגובה</string>



    `   <!--manifest-->
    <string name="title_activity_give_and_take">GiveAndTakeActivity</string>

    <!--Pages content-->
    <string name="about">"נקודת צמיחה" הינו פרויקט ייחודי וארצי, הפועל במסגרת "קרן חן וחסד" ומטרתו לסייע למשפחות בתחומי החיים השונים, באמצעות הנחייה משפחתית. הפרויקט נועד להקנות כלים ולהנחות משפחות המתמודדות עם משברים רגשיים מגוונים הנובעים מבעיות כלכליות, זוגיות, תעסוקה וכ"ו; ומטרתו לעזור למשפחות  לעשות שינוי בדרך התנהלותן ולהגיע לצמיחה כלכלית ואיזון במישורים המשפחתיים השונים. הפרויקט מבוסס על מודל ייחודי המלמד את המשפחות איך לעשות שינוי פנימי עמוק, וע"י כך לשנות את עולמן החיצוני. כל מנחה משפחה מלווה משפחה אחת, שעה אחת בשבוע, למשך שנה.</string>

    <!--Give and take-->
    <string name="give_take">קח תן</string>
    <string name="give">פרסם מוצר למסירה</string>
    <string name="post_your_offer">סמן את סוג המודעה</string>
    <string name="post_offer">פרסם</string>
    <string name="cancel">בטל</string>
    <string name="add_image">לחץ כאן להוספת תמונה </string>
    <string name="give_away_stuff">אומרים שלתת זה יותר מלקבל, אז למה שלא תיתן...</string>

    <!--Alert Dialog-->
    <string name="alert_title">התחבר/הירשם</string>
    <string name="later">יותר מאוחר</string>
    <string name="alert_message">על מנת לפרסם מודעה תחילה יש להתחבר</string>
    <string name="add">הוסף</string>
    <string name="choose_one_option">בחר סוג מודעה </string>
    <string name="Take">קח</string>
    <string name="add_update_admins">הוסף/עדכן מנהל (אדמין):</string>
    <string name="update">עדכן</string>

    <string name="Families">משפחות</string>
    <string name="Volunteers">מתנדבים</string>
    <string name="mentors">מנחים</string>
    <string name="general_questions">שאלות כלליות</string>

    <string name="title_activity_general_questions">GeneralQuestions</string>
    <string name="title_activity_general_questions_active">GeneralQuestionsActive</string>
    <string name="about2"><b><i>\'\'נקודת צמיחה\'\'</i></b> הנו פרויקט ייחודי וארצי, הפועל במסגרת <b><i>\'\'קרן חן וחסד\'\'</i></b>  ומטרתו לסייע למשפחות בתחומי החיים השונים, באמצעות הנחייה משפחתית. \n \nהפרויקט נועד להקנות כלים ולהנחות משפחות המתמודדות עם משברים רגשיים מגוונים הנובעים מבעיות כלכליות, זוגיות, תעסוקה וכ\'\'ו, ומטרתו לעזור למשפחות לעשות שינוי בדרך התנהלותן ולהגיע לצמיחה כלכלית ואיזון במישורים המשפחתיים השונים. לכל משפחה יש מנחה אשר מלווה אותה שעה אחת בשבוע, למשך שנה. \n \nהמתנדבים למדו את תורתו של בעל הסולם – הרב אשלג, המדבר על שינוי פני החברה באמצעות הכלל \'\'ואהבת לרעך כמוך\'\'. הם בעלי מקצוע בתחומי הטיפול או בתחומי הכספים, אנשים עם הרבה נתינה ואכפתיות, שיודעים על בשרם מה זה לעלות מלמטה באמצעות התפתחות אישית.</string>
    <string name="Contact_Us">צור קשר</string>
    <string name="contact_us_text"><b><i>מנהל התוכנית:</i></b> \nלגיוסי כספים ושיתופי פעולה עם התוכנית נקודת צמיחה\nעו\'\'ד אוהד דוד פוקס\nטלפון: 054-4431120 ohadfux@gmail.com\n \n\n<b><i>לשאלות כלליות:</i></b> \nמר אילן אלנתן\nטלפון: 3401682- 052 elnatan72@gmail.com\n \n\n<b><i>סניף כפר סבא:</i></b> \nמנהלת סניף כפ"ס - הגברת עטל אייזנברג\nטלפון: 7564451- 050 ethel5@walla.co.il\n \n\n<b><i>סניף ירושלים:</i></b> \nמנהלת סניף ירושלים – הגברת איילת גרליץ\nטלפון: 4132109- 050  </string>

    <!--Avigail-->
    <string name="GeneralQuestions2"><b><i>מי יכול להיות  מנחה שלנו?</i></b>\nמשפחות רגילות, שנקלעו למשבר כלשהוא, כגון: פיטורין, מחלה קשה, התמוטטות עסקית וכדומה.  \n\n<b><i>מה הקריטריונים שלנו לקבלת משפחה?</i></b>\nאנשים עם הרבה נתינה! \nהשכלה אקדמאית חובה!\nבעלי מקצוע בתחומי הטיפול או בתחומי הכספים.והכי חשוב, אנשים שיודעים "על בשרם" מה זה לעלות מלמטה באמצעות התפתחות אישית. \n\n<b><i>האם חובה לעבור קורס כדי להיות מנחה? </i></b>\nכן, הקורס מכשיר את המנחים בנוסף לידע המקצועי שלהם , בעבודה פנימית , עשיית חסד, כלים לאבחון בעיות המשפחה ועוד.\n\n<b><i>מבנה הקורס 10 מפגשים העוסקים בנושאים:</i></b> \n\u2022 הבנת המהות הפנימית באדם  \n\u2022 הבנה והכרת "המכשולים"-אמונות \n\t ורגשות\n\u2022 מהות העבודה הפנימית  \n\t  התבוננות ,לימוד החכמה\n\u2022  כניסה להשפעה-חסד\n\u2022 רכישת כלים כלכליים, זוגיים, \n\t  חינוכיים ומיצוי זכויות.\n\u2022 החדרת רוח ומוטיבציה למנחה. \n\n<b><i>האם קורס הכשרת המנחים כרוך בתשלום?</i></b>\nכן, מאחר ואנחנו עמותת חסד, שאינה מקבלת תקציבים משום גורם, עלינו לכסות את עלויות הקורס, לכן השתתפות בקורס כרוכה בתשלום של 350 ₪ לכיסוי ההוצאות. </string>
    <string name="GeneralQuestions1"><b><i>אילו משפחות מתקבלות ללווי?</i></b>\nמשפחות רגילות, שנקלעו למשבר כלשהוא, כגון: פיטורין, מחלה קשה, התמוטטות עסקית וכדומה.  \n\n<b><i>מה הקריטריונים שלנו לקבלת משפחה?</i></b>\nאם אתם זוכרים שפעם היה טוב בבית. אם אתם מרגישים שאילולא המשבר הנוכחי, הכל היה בסדר שוב. אם אתם מרגישים שאתם חייבים לעשות שינוי. ויכולים להתמיד בו. \n\n<b><i>האם רק משפחות דתיות, יכולות לקבל מלווה? </i></b>\nלא, כל משפחה יהודית יכולה לפנות לקבלת ליווי. \n\n<b><i>איך מתקבלים ללווי?</i></b>\nבדרך כלל מתקבלות משפחות, שהופנו ע"י הרווחה. אבל כל משפחה במשבר, שלא מוצאת מענה יכולה לפנות אלינו ותקבל מענה, בתנאי, שיש לנו מנחים הפועלים באזור המגורים של המשפחה. \n\n<b><i>האם הליווי כרוך בתשלום?</i></b>\nלא, כל התהליך מתבצע בהתנדבות.\n\n <b><i>אילו משפחות לא יתקבלו ללווי?</i></b>\nמשפחות, שהבעיות בהן נובעות משימוש בסמים, אלכוהול, פעילות עבריינית וכדומה. \n\n<b><i>איך מתבצע תהליך הליווי?</i></b>\nהמלווה מגיע למשפחה לפגישה שבועית. </string>
    <!--tam-->
    <string name="families_questions"><b>אילו משפחות מתקבלות ללווי?</b>\nמשפחות רגילות, שנקלעו למשבר כלשהוא, כגון: פיטורין, מחלה קשה, התמוטטות עסקית וכדומה.  \n\n<b>מה הקריטריונים שלנו לקבלת משפחה?</b>\nאם אתם זוכרים שפעם היה טוב בבית. אם אתם מרגישים שאילולא המשבר הנוכחי, הכל היה בסדר שוב. אם אתם מרגישים שאתם חייבים לעשות שינוי. ויכולים להתמיד בו. \n\n<b>האם רק משפחות דתיות, יכולות לקבל מלווה? </b>\nלא, כל משפחה יהודית יכולה לפנות לקבלת ליווי. \n\n<b>איך מתקבלים ללווי?</b>\nבדרך כלל מתקבלות משפחות, שהופנו ע"י הרווחה. אבל כל משפחה במשבר, שלא מוצאת מענה יכולה לפנות אלינו ותקבל מענה, בתנאי, שיש לנו מנחים הפועלים באזור המגורים של המשפחה. \n\n<b>האם הליווי כרוך בתשלום?</b>\nלא, כל התהליך מתבצע בהתנדבות.\n\n <b>אילו משפחות לא יתקבלו ללווי?</b>\nמשפחות, שהבעיות בהן נובעות משימוש בסמים, אלכוהול, פעילות עבריינית וכדומה. \n\n<b>איך מתבצע תהליך הליווי?</b>\nהמלווה מגיע למשפחה לפגישה שבועית.</string>
    <string name="mentors_questions"><b>מי יכול להיות  מנחה שלנו?</b>\nאנשים עם הרבה נתינה! \nהשכלה אקדמאית חובה!\nבעלי מקצוע בתחומי הטיפול או בתחומי הכספים.והכי חשוב, אנשים שיודעים "על בשרם" מה זה לעלות מלמטה באמצעות התפתחות אישית. \n\n<b>האם חובה לעבור קורס כדי להיות מנחה? </b>\nכן, הקורס מכשיר את המנחים בנוסף לידע המקצועי שלהם , בעבודה פנימית , עשיית חסד, כלים לאבחון בעיות המשפחה ועוד.\n\n<b>מבנה הקורס 10 מפגשים העוסקים בנושאים:</b> \n\u2022 הבנת המהות הפנימית באדם  \n\u2022 הבנה והכרת "המכשולים"-אמונות \n\t ורגשות\n\u2022 מהות העבודה הפנימית  \n\t  התבוננות ,לימוד החכמה\n\u2022  כניסה להשפעה-חסד\n\u2022 רכישת כלים כלכליים, זוגיים, \n\t  חינוכיים ומיצוי זכויות.\n\u2022 החדרת רוח ומוטיבציה למנחה. \n\n<b>האם קורס הכשרת המנחים כרוך בתשלום?</b>\nכן, מאחר ואנחנו עמותת חסד, שאינה מקבלת תקציבים משום גורם, עלינו לכסות את עלויות הקורס, לכן השתתפות בקורס כרוכה בתשלום של 350 ₪ לכיסוי ההוצאות.</string>
    <string name="contact_us"><b>מנהל התוכנית:</b> \nלגיוסי כספים ושיתופי פעולה עם התוכנית נקודת צמיחה\nעו\'\'ד אוהד דוד פוקס\nטלפון: 054-4431120 ohadfux@gmail.com\n \n\n<b>לשאלות כלליות:</b> \nמר אילן אלנתן\nטלפון: 3401682- 052 elnatan72@gmail.com\n \n\n<b>סניף כפר סבא:</b> \nמנהלת סניף כפ"ס - הגברת עטל אייזנברג\nטלפון: 7564451- 050 ethel5@walla.co.il\n \n\n<b>סניף ירושלים:</b> \nמנהלת סניף ירושלים – הגברת איילת גרליץ\nטלפון: 4132109- 050</string>
    <string name="about_text"><b>\'\'נקודת צמיחה\'\'</b> הנו פרויקט ייחודי וארצי, הפועל במסגרת <b>\'\'קרן חן וחסד\'\'</b>  ומטרתו לסייע למשפחות בתחומי החיים השונים, באמצעות הנחייה משפחתית. \n \nהפרויקט נועד להקנות כלים ולהנחות משפחות המתמודדות עם משברים רגשיים מגוונים הנובעים מבעיות כלכליות, זוגיות, תעסוקה וכ\'\'ו, ומטרתו לעזור למשפחות לעשות שינוי בדרך התנהלותן ולהגיע לצמיחה כלכלית ואיזון במישורים המשפחתיים השונים. לכל משפחה יש מנחה אשר מלווה אותה שעה אחת בשבוע, למשך שנה. \n \nהמתנדבים למדו את תורתו של בעל הסולם – הרב אשלג, המדבר על שינוי פני החברה באמצעות הכלל \'\'ואהבת לרעך כמוך\'\'. הם בעלי מקצוע בתחומי הטיפול או בתחומי הכספים, אנשים עם הרבה נתינה ואכפתיות, שיודעים על בשרם מה זה לעלות מלמטה באמצעות התפתחות אישית.</string>
    <string name="click_add_image">לחץ להוספת תמונה</string>
    <string name="take">פרסם דרישה למוצר</string>
    <string name="exist_user">משתמש רשום? התחבר:</string>
</resources>
