<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tamn.app2uproject.Fragments.SigninFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:padding="5dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/Email"
            android:gravity="center">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etSigninEmail"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:hint="@string/email"
                android:layoutDirection="rtl"
                android:textAlignment="textStart"
                android:layout_gravity="start"
                android:textSize="15dp"
                />

            <ImageView
                android:layout_width="34dp"
                android:layout_height="35dp"
                android:id="@+id/ivMail"
                android:background="@drawable/ic_email"

                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etSigninPassword"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_weight="1"
                android:hint="@string/password"
                android:textSize="15dp"
                android:gravity="right"
                />

            <ImageView
                android:layout_width="43dp"
                android:layout_height="37dp"
                android:id="@+id/ivPassword"
                android:background="@drawable/ic_lock" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/Signin"
        android:id="@+id/btnSignin"
        android:background="#8cc540"
        android:textColor="#ffff"
        android:padding="5dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forgot_password"
        android:id="@+id/tvResetPassword"
        android:layout_below="@+id/btnSignin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/reset_message"

        android:id="@+id/tvResetmessage"
        android:layout_below="@+id/tvResetPassword"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>
