<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SignupFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="5dp">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/username"
            android:gravity="center">

            <ImageView
                android:layout_width="38dp"
                android:layout_height="35dp"
                android:id="@+id/ivUsername"
                android:background="@drawable/ic_person"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etUser"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="30dp"
                android:hint="@string/username"
                android:textSize="15dp"
                />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:id="@+id/Email"

            android:gravity="center">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="35dp"
                android:id="@+id/ivMail"
                android:background="@drawable/ic_email"

                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etSignupEmail"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingLeft="10dp"
                android:hint="@string/email"
                android:textSize="15dp"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            >

            <ImageView
                android:layout_width="43dp"
                android:layout_height="37dp"
                android:id="@+id/ivPassword"

                android:background="@drawable/ic_lock" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etSignupPassword"
                android:inputType="textPassword"
                android:ems="10"
                android:layout_weight="1"
                android:hint="@string/password"
                android:textSize="15dp"
                android:gravity="right"
                />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/btnSignup"
        android:background="#8cc540"
        android:textColor="#ffff"
        android:padding="5dp"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp" />


    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_person"
        app:civ_border_width="2dp"
        app:civ_border_color="#d9cfcf"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="28dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivCamera"
        android:background="@drawable/ic_add_a_photo"
        android:layout_alignBottom="@+id/profile_image"
        android:layout_alignRight="@+id/profile_image"
        android:layout_alignEnd="@+id/profile_image" />

    <!--<ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/ivProfileImage"
        android:background="@drawable/ic_add_a_photo"
        android:layout_marginBottom="38dp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true" />-->


</RelativeLayout>
